--- a/src/Pages/Coin.css
+++ b/src/Pages/Coin.css
@@ -43,7 +43,7 @@
 .info .coin-price {
     display: flex;
     align-items: center;
-    justify-content: end;
+    justify-content: flex-end;
 }
 
 .info p {
